# src/static/swagger_pep_proxy_ui.json
@@ -1,99 +1,112 @@
 {
-    "openapi" : "3.0.0",
-    "info" : {
-      "version" : "1.0.0",
-      "title" : "Policy Enforcement Point Interfaces",
-      "description" : "This OpenAPI Document describes the endpoints exposed by Policy Enforcement Point Building Block deployments. <br> <br> Using this API will allow to register resources that can be protected using both the Login Service and the Policy Decision Point and access them through the Policy Enforcement Endpoint. <br> <br> As an example this documentation uses \"proxy\" as the configured base URL for Policy Enforcement, but this can be manipulated through configuration parameters."
+    "openapi": "3.0.0",
+    "info": {
+        "version": "1.0.0",
+        "title": "Policy Enforcement Point Interfaces",
+        "description": "This OpenAPI Document describes the endpoints exposed by Policy Enforcement Point Building Block deployments. <br> <br> Using this API will allow to register resources that can be protected using both the Login Service and the Policy Decision Point and access them through the Policy Enforcement Endpoint. <br> <br> As an example this documentation uses \"proxy\" as the configured base URL for Policy Enforcement, but this can be manipulated through configuration parameters."
     },
-    "tags" : [ {
-      "name" : "Policy Enforcement",
-      "description" : "Proxying functionality to enforce authorization policies"
-    } ],
-    "paths" : {
-      "/proxy/{path}" : {
-        "parameters" : [ {
-          "in" : "path",
-          "name" : "path",
-          "description" : "Path to the Back-End Service",
-          "required" : true,
-          "schema" : {
-            "type" : "string"
-          }
-        }, {
-          "in" : "header",
-          "name" : "Authorization",
-          "description" : "RPT Token generated through UMA Flow",
-          "schema" : {
-            "type" : "string"
-          }
-        } ],
-        "get" : {
-          "tags" : [ "Policy Enforcement" ],
-          "summary" : "Request to Back-End Service",
-          "description" : "This operation propagates all headers and query parameters",
-          "responses" : {
-            "200" : {
-              "description" : "OK"
-            },
-            "401" : {
-              "$ref" : "#/components/responses/UMAUnauthorized"
-            }
-          }
-        },
-        "post" : {
-          "tags" : [ "Policy Enforcement" ],
-          "summary" : "Request to Back-End Service",
-          "description" : "This operation propagates all headers, query parameters and body",
-          "responses" : {
-            "200" : {
-              "description" : "OK"
-            },
-            "401" : {
-              "$ref" : "#/components/responses/UMAUnauthorized"
-            }
-          }
-        },
-        "put" : {
-          "tags" : [ "Policy Enforcement" ],
-          "summary" : "Request to Back-End Service",
-          "description" : "This operation propagates all headers, query parameters and body",
-          "responses" : {
-            "200" : {
-              "description" : "OK"
-            },
-            "401" : {
-              "$ref" : "#/components/responses/UMAUnauthorized"
-            }
-          }
-        },
-        "delete" : {
-          "tags" : [ "Policy Enforcement" ],
-          "summary" : "Request to Back-End Service",
-          "description" : "This operation propagates all headers",
-          "responses" : {
-            "200" : {
-              "description" : "OK"
-            },
-            "401" : {
-              "$ref" : "#/components/responses/UMAUnauthorized"
-            }
-          }
+    "tags": [
+        {
+            "name": "Policy Enforcement",
+            "description": "Proxying functionality to enforce authorization policies"
         }
-      }
+    ],
+    "paths": {
+        "/proxy/{path}": {
+            "parameters": [
+                {
+                    "in": "path",
+                    "name": "path",
+                    "description": "Path to the Back-End Service",
+                    "required": true,
+                    "schema": {
+                        "type": "string"
+                    }
+                },
+                {
+                    "in": "header",
+                    "name": "Authorization",
+                    "description": "RPT Token generated through UMA Flow",
+                    "schema": {
+                        "type": "string"
+                    }
+                }
+            ],
+            "get": {
+                "tags": [
+                    "Policy Enforcement"
+                ],
+                "summary": "Request to Back-End Service",
+                "description": "This operation propagates all headers and query parameters",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/UMAUnauthorized"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Policy Enforcement"
+                ],
+                "summary": "Request to Back-End Service",
+                "description": "This operation propagates all headers, query parameters and body",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/UMAUnauthorized"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Policy Enforcement"
+                ],
+                "summary": "Request to Back-End Service",
+                "description": "This operation propagates all headers, query parameters and body",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/UMAUnauthorized"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Policy Enforcement"
+                ],
+                "summary": "Request to Back-End Service",
+                "description": "This operation propagates all headers",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/UMAUnauthorized"
+                    }
+                }
+            }
+        }
     },
-    "components" : {
-      "responses" : {
-        "UMAUnauthorized" : {
-          "description" : "Unauthorized access request.",
-          "headers" : {
-            "WWW-Authenticate" : {
-              "schema" : {
-                "type" : "string"
-              },
-              "description" : "'UMA_realm=\"example\",as_uri=\"https://as.example.com\",ticket=\"016f84e8-f9b9-11e0-bd6f-0021cc6004de\"'"
+    "components": {
+        "responses": {
+            "UMAUnauthorized": {
+                "description": "Unauthorized access request.",
+                "headers": {
+                    "WWW-Authenticate": {
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "'UMA_realm=\"example\",as_uri=\"https://as.example.com\",ticket=\"016f84e8-f9b9-11e0-bd6f-0021cc6004de\"'"
+                    }
+                }
             }
-          }
         }
-      }
     }
-  }
+}
